Apply PMD change.
git-svn-id: https://svn.apache.org/repos/asf/creadur/rat/branches/gsoc@1549316 13f79535-47bb-0310-9956-ffa450edef68